
        - Nginx:
            - Not allow access to '/.well-known/'.
            - Not forward real client IP address to SOGo.
            - Config file for catch-all virtual host `default.conf` has been
              renamed to `00-default.conf`, to make sure it will be loaded
              before other virtual host config files.

        - Roundcube webmail:
            - Not set proper file owner (apache/nginx) and permission (0600)
              for config file of password plugin.

        - iRedAPD:
            - Not add FreeBSD Jail IP address as trusted client. This causes
              mail delivery failure while sending to user under same domain.
              Thanks Erez Zabusky <erez_z _at_ cre8ip.com> for the report.

        - OpenBSD:
            - not enable uwsgi service.
            - not create symbol links for PHP programs.

    * Updated packages:
        + Roundcube -> 1.2.3
        + iRedAdmin -> 0.6.3
        + uwsgi -> 2.0.14 (OpenBSD only)
        + FreeBSD:
            - php-7.0
            - mysql-5.7

iRedMail-0.9.5-1:
    * Fixed issues:
        - Postfix:
            - Cannot deliver email to system account.
        - OpenLDAP:
            - Incorrect default password scheme if module 'pw-sha2' is not
              available.
        - PHP
            - Allow functions: 'popen', 'openlog'. Required by Roundcube.
        - Incorrect compress command used in logrotate config files.
        - Add missing package 'mcrypt' on RHEL/CentOS 6.

    * Updated packages:
        + iRedAPD -> 1.9.1

iRedMail-0.9.5:
    * Supports new distribution release:
        + Ubuntu 16.04 LTS (code name: xenial).
        + OpenBSD 5.9.

    * Drop support for old distribution releases:
        - Ubuntu 15.10 (code name: wily).
        - OpenBSD 5.8.
        - Debian 7 (code name: Wheezy). Please use Debian 8 instead.

          Debian team stops offering security updates for Debian 7 after